Refactor : orderService Order Entity에 amount 필드 추가 및 주문 생성시 amount 저장 하도록 수정